--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+*.playground
 
 # CocoaPods
 #
@@ -27,3 +28,6 @@ DerivedData
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 #
 # Pods/
+
+
+.DS_Store
